--- a/AC14HTML-day05homework/文檔閱讀.md
+++ b/AC14HTML-day05homework/文檔閱讀.md
@@ -3,6 +3,8 @@
     -::after與標籤的間距無法調整
     -seciton做1440px可是section就無法做滿版背景顏色，所以我做個div在外面這樣會有影響嗎
     -學生評論的向上對其不會成功
+        -asw 是因為li 用了margin:auto， 這樣會變成，垂直置中，只能寫成兩行margin-left跟margin-right
     -出現很多次的btn到底要不要做公用樣式
     -有些a標籤拖曳著會有內容，有些沒有。
+        -asw 是沒有加到href不認定是連結
     -輪播圖長度有問題
