五倍官網首頁作業 老師已檢討

--- a/AC14HTML-day05homework/文檔閱讀.md
+++ b/AC14HTML-day05homework/文檔閱讀.md
@@ -7,4 +7,11 @@
     -出現很多次的btn到底要不要做公用樣式
     -有些a標籤拖曳著會有內容，有些沒有。
         -asw 是沒有加到href不認定是連結
-    -輪播圖長度有問題
+    -輪播圖高度有問題
+
+老師講解
+    做作業需要先分析標籤架構與class命名
+    名字的命名
+
+    seo a包h3
+    絕對定位會強制將display轉成block
